Sorteo del Mundial

--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1,5 +1,6 @@
 .input{
     color: blueviolet;
+    
 }
 
 body{
@@ -22,9 +23,14 @@ form{
     background-color: brown;
     color: black;
     font-size: 30px;
-}
+    }
 
 h4{
     color: gold;
     background-color: green;
 }
+
+label{
+    font-size: 30px;
+}
+
